changed some stuff and hopefully fixed some bugs
Took 1 hour 0 minutes